syntax = "proto3";

package posts;
option go_package="posts/protos";
service Posts{
    rpc CreatePost (CreatePostRequest) returns (PostReply) {}
    rpc UpdatePost (UpdatePostRequest) returns (PostReply) {}
    rpc ReadPost (ReadPostRequest) returns (PostReply) {}
}

message CreatePostRequest{
    string text = 1;
    string title = 2;
    string author = 3;
}

message UpdatePostRequest{
    string id = 1;
    string text = 2;
    string title = 3;
    string author = 4;
}

message ReadPostRequest{
    string id = 1;
}

message PostReply{
    string id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
}
